--- a/charts/charts.css
+++ b/charts/charts.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: #11002e;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
@@ -138,7 +138,7 @@ p,
   padding: 10px 20px;
   margin: 5px;
   border-radius: 5px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   font-weight: 700;
 }
